user-charts/admin-a/templates/network/admin-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
