user-charts/admin-a/templates/network/admin-test-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
    - name: a-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "sb.192.168.100.241.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test
          port: 8080
